--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
     <!-- Search Box - TODO Edit Style to make more obvious -->
     <input id="search" type="text"placeholder="What/Where to Study?">
     <!-- New Sesh Button - TODO Edit Style -->
-    <button type="button">New Sesh</button>
+    <button type="button" id="newSesh" style="color: white">New Sesh</button>
 
 </div>
 
