Added Algolia Search (not currently hooked up to home)

--- a/home.html
+++ b/home.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="studiousSheet.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif+JP:600" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/algoliasearch/3/algoliasearch.min.js"></script>
+    <script src="./studious.js"></script>
 
 </head>
 <body>
@@ -25,7 +27,7 @@
 <div id="map"></div>
 
 <!-- Info, float right -->
-<div id="info">
+<div id="info" style="overflow-y: auto;">
 
     <div class="card">
         <div class="container">
