--- a/below_main/home.html
+++ b/below_main/home.html
@@ -80,26 +80,26 @@
 
 
 <script>
-    var map;
+    let map;
     function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
             center: {lat:39.9526, lng:-75.1652},
             zoom: 16
         });
 
-        infoWindow = new google.maps.InfoWindow;
-
         // Try HTML5 geolocation.
         if (navigator.geolocation) {
             navigator.geolocation.getCurrentPosition(function(position) {
-                var pos = {
+                let pos = {
                     lat: position.coords.latitude,
                     lng: position.coords.longitude
                 };
 
-                infoWindow.setPosition(pos);
-                infoWindow.setContent('Location found.');
-                infoWindow.open(map);
+                // The marker
+                let marker = new google.maps.Marker({position: pos, map: map});
+
+
+                // InfoWindow Stuff -- Don't need?
                 map.setCenter(pos);
             }, function() {
                 handleLocationError(true, infoWindow, map.getCenter());
