--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="studiousSheet.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif+JP:600" rel="stylesheet">
     <script src="./studious.js"></script>
+    <script type='text/javascript' src='config.js'></script>
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-firestore.js"></script>
 
