Updated firestore things, new GCP api things

--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
 </div>
 
 
-
+<!-- Map -->
 <script>
     let map;
     function initMap() {
@@ -110,7 +110,10 @@
         infoWindow.open(map);
     }
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCErj04WXABD7gi4dI_FwdUuyoCwKEFObY&callback=initMap"></script>
+
+<script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC_Qr_-1xSnDHkkUk3mbNLeTZ4rpGUulQw&callback=initMap">
+</script>
 <script src="studious.js"></script>
 </body>
 </html>
